# password-container-xblock

./: .gitignore  CHANGELOG.md  MANIFEST.in  README.md  setup.cfg  setup.py
.circleci/: config.yml
password_container/: __init__.py  forms.py  models.py  password_container.py
password_container/locale/fr/LC_MESSAGES/: django.mo  django.po
password_container/static/css/: password-container.css
password_container/static/html/: 1-not-yet-available.html  2-enter-password.html  3-available.html  4-not-available-anymore.html  5-time-elapsed.html  staff-view.html  studio.html  studio_edit.html
password_container/static/js/src/: lms_view.js  password_container.js  studio_edit.js
