;;
;; FUN package
;;
[metadata]
name = password_container-xblock
version = 0.2.0
description = This Xblock will restrict access to its children for a time period and an identication process
long_description = file: README.md
author = Open FUN (France Universite Numerique)
author_email = fun.dev@fun-mooc.fr
url = https://github.com/openfun/password-container-xblock
license= AGPL 3.0
keywords = Django, Open edX, MOOC, Xblock
classifiers =
    Development Status :: 5 - Production/Stable
    Framework :: Django
    Framework :: Django :: 1.8
    Intended Audience :: Developers
    License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
    Natural Language :: English
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[options]
include_package_data = true
install_requires =
    XBlock
packages = find:
zip_safe = False

[options.entry_points]
xblock.v1 =
    password_container = password_container:PasswordContainerXBlock

[options.extras_require]
dev =
    wheel

[wheel]
universal = 1
